saving home, data, comparisons pages and final nav

--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,8 @@
 #User add ons 
 instructions/
+navbar.html
+workspace.code-workspace
+archive/
 
 # Byte-compiled / optimized / DLL files
 __pycache__/
