finishing touches on site

--- a/.gitignore
+++ b/.gitignore
@@ -3,6 +3,8 @@ instructions/
 navbar.html
 workspace.code-workspace
 archive/
+BrandLogo.png
+litera.css
 
 # Byte-compiled / optimized / DLL files
 __pycache__/
